ハードウェア完了、コンピューター途中

--- a/AppliedInformation/午後/H25A.md
+++ b/AppliedInformation/午後/H25A.md
@@ -179,6 +179,36 @@ CとかC++やってる人なら解けるのであろう。
 ・r->next->prev → 次のリストの前のリストのアドレスってことは自分自身  
 
 解説を見た限り、ポインタ変数は->nextを表していたりするはず。  
+2回目をやってみれば、前提が分かってるからある程度正解できたけど、それでも全問正解は無理だった。  
+->nextだのなんだの、いまいち関係性がわからないし、解説も若干弱い。  
+
+この問題で最終的にわからなかったのはprev,nextの問題。  
+サイズの問題は復習して十分に理解できた。  
+
+設問1  
+(1),ウ  
+(2),オ  
+
+(1)ウに関しては、1つ後ろのメモリブロックの確認に行く意味が分からない。  
+あ？もしかした今のブロックには空きはないけど、次のブロックにはあるかもしれないからnextをセットして様子を見に行くってことか？  
+だとしたらnextセットするのも頷けるけど、どこにもそういうヒントらしき文言がないので、100点を取らせないための問題に思えてならない。  
+
+(2)オに関しては、循環リストを構築するために必要な手順ってことなのか？  
+r->prev = q
+q->next = r
+この地点でお互いが前後している。  
+q->next->prev = r  
+いや、これこそ[ここ](https://www.ap-siken.com/bbs/2517.html)で書いてることなんだ。  
+この概念を知っていなければそもそも解けない問題だ。  
+
+r->prevはもちろん1つ前のアドレスの先頭を指定する必要があるので、qは納得。  
+r->nextは [q→[1-1]→[1-2]→[2]（※r→[1-2]となります。）]この考え方に乗っ取るなら、[2]を見ることになるが、  
+循環させるなら[2]はqを見るべきなので、qとしたいところだが、q->next = rということで、結局自分に戻ってくる。  
+それならr->next = rってしてはダメだったのか？  
+ここが全然納得できないんだよなぁ。  
+`r->next は、r の1つ後のメモリブロックの先頭アドレスなので、「q->next」をセットするのが適切です。`  
+解説でもこれしか言ってないし、何が適切なのかもわからない。  
+この問題はそういうものだと割り切ってあきらめたほうがいいかなぁ。  
 
 ``` txt 30分オーバー 3/12
 NULL × EDGEの先頭アドレス
@@ -313,7 +343,7 @@ pm02_10.gif/image-size:510×108
 ∴メモリブロックの先頭アドレスが変わるから
 ```
 
-``` txt
+``` txt : q->next->prevの意味
 https://www.ap-siken.com/bbs/2517.html
 設問と直接関係ないのですが，どなたかお教えいただけますと幸いです。
 2ページ目の最後尾にて（空欄[オ]の後に）「q->next->prev には r を，q->next には r を順にセットする。関数の戻り値に q の値をセットして終了する。」と記載されておりますが，「q->next->prev には r 」の部分に理解が追い付いておりません。
