--- a/BasicInformation/午前/1.テクノロジ系/1.基礎理論.md
+++ b/BasicInformation/午前/1.テクノロジ系/1.基礎理論.md
@@ -928,6 +928,42 @@ $4×3×2×1＝24$
 2つ以上の正の整数の共通な倍数（公倍数）のうち最小のもの  
 例) 2 と 3 の公倍数は，6,12,18,24,... で， 6 が最小公倍数  
 
+### ガウスの計算法
+
+1からnまでの和を求める計算法  
+等差数列の和を手っ取り早く求める方法。  
+
+``` math : 公式
+n(n+1)/2
+
+例) 0 ~ 99の場合
+99(99 + 1) / 2 = 4950
+
+例) 1 ~ 100の場合
+100(100 + 1) / 2 = 5050
+```
+
+[ガウスの計算法](https://tamura.fcs.ed.jp/wysiwyg/file/download/128/68217)
+
+1 から 100 までの数字すべてを足すようにという課題を出したが、それをガウスは即座に 5050 だと答えた。  
+教師がどう答えを導いたのかを尋ねると、ガウスは 1 + 100 = 101, 2 + 99 = 101,••• , 50 + 51 = 101 となるので答えは 101 × 50 = 5050 だと説明して教師を驚かせたというものです。  
+
+``` txt
+    1 +  2 +  3 + ・・・ + 98 + 99 + 100
+＋100 + 99 + 98 + ・・・ +  3 +  2 +   1
+----------------------------------------
+  101  101  101           101  101   101
+= 101 * 100 = 10100
+10100 / 2 = 5050
+```
+
+``` math : 等差数列の和の公式
+Sn = (n*(s+e))/2
+
+s : 初項
+e : 末項
+```
+
 ---
 
 ## 1回目に間違えた問題
