--- a/BasicInformation/午前/1.テクノロジ系/3.コンピューター構成要素.md
+++ b/BasicInformation/午前/1.テクノロジ系/3.コンピューター構成要素.md
@@ -2,478 +2,819 @@
 
 ---
 
-## プロセッサー
+## プロセッサ
 
+一般に命令の実行は、次の5つのステージに分かれています。  
 
-一般に命令の実行は、次の5つのステージに分かれています。フェッチ（fetch）とは「取ってくる」をいう意味をもつ言葉です。
 ### 命令フェッチ
-プログラムカウンタが示すアドレスから命令語を命令レジスタに取り出す。
+
+プログラムカウンタが示すアドレスから命令語を命令レジスタに取り出す。  
+フェッチ（fetch）とは「取ってくる」をいう意味をもつ言葉です。  
 
 ### 命令デコード
+
 命令デコーダが取り出した命令を解読する。
 
 ### 実効(有効)アドレス計算
+
 命令語のオペランド部の値を用いて、演算対象のデータを保持する主記憶のアドレスを計算する。
 
 ### オペランドフェッチ
+
 計算されたアドレス値を用いて主記憶からデータを汎用レジスタに取り出す。
 
 ### 実行
+
 解読された命令と演算対象のデータで命令を用いて演算を行う。
 
-
 ### プログラムカウンター(プログラムレジスタ)
+
 次に実行するべき命令が格納されている主記憶上のアドレスを保持するレジスタです。
 命令自体はメモリ上にある。そのアドレスを保持するレジスタでしかない。
 
 ### 命令レジスタ
+
 主記憶から取り出された命令が格納される場所です。
 
 ### ALU(Arithmetic Logic Unit)
+
 演算装置。論理演算と加算、減算を行う。記号はめっちゃ太字のVみたいなやつ。
 
 ### アキュムレータ
-演算途中の結果を一時的に保持しておくためのレジスタです。
-演算データを保管するレジスタが1つしかない場合、このレジスタを「アキュムレータ」と呼ぶ。
+
+演算途中の結果を一時的に保持しておくためのレジスタです。  
+演算データを保管するレジスタが1つしかない場合、このレジスタを「アキュムレータ」と呼ぶ。  
 
 ### 汎用レジスタ
-データの一時的な保持や演算結果の格納など、使い方を自由に決められる。
-CPUの中にあって、演算データを一時的に保管するレジスタを複数持つ場合、この複数のレジスタ群を「汎用レジスタ」と呼ぶ。
+
+データの一時的な保持や演算結果の格納など、使い方を自由に決められる。  
+CPUの中にあって、演算データを一時的に保管するレジスタを複数持つ場合、この複数のレジスタ群を「汎用レジスタ」と呼ぶ。  
 
 ### スタックポインタ
-スタックの先頭アドレスを保持する。
+
+スタックの先頭アドレスを保持する。  
 
 ### レジスタファイル
-レジスタを複数集めたプロセッサ内のモジュール
 
+レジスタを複数集めたプロセッサ内のモジュール  
 
-コンピュータは、次のようなサイクルを繰り返して命令を処理していきます。
-①プログラムカウンタを参照して、次に実行すべき命令が格納されている位置を知る。
-②主記憶から命令レジスタに命令を読込む。(命令フェッチ)
-③その次に実行する命令の主記憶上のアドレスをプログラムカウンタに格納する。
-④命令レジスタの命令を命令デコーダで解読(解釈)する。(命令デコード)
-⑤演算で必要となる値(オペランド)を主記憶やレジスタから読込む。(オペランド読出し)
-⑥命令を実行する。
-⑦実行結果を主記憶やレジスタに書込む。
-
-
+コンピュータは、次のようなサイクルを繰り返して命令を処理していきます。  
+①プログラムカウンタを参照して、次に実行すべき命令が格納されている位置を知る。  
+②主記憶から命令レジスタに命令を読込む。(命令フェッチ)  
+③その次に実行する命令の主記憶上のアドレスをプログラムカウンタに格納する。  
+④命令レジスタの命令を命令デコーダで解読(解釈)する。(命令デコード)  
+⑤演算で必要となる値(オペランド)を主記憶やレジスタから読込む。(オペランド読出し)  
+⑥命令を実行する。  
+⑦実行結果を主記憶やレジスタに書込む。  
 
 ### プログラム格納方式(プログラム内蔵方式)
+
 主記憶に記憶されたプログラムを，CPUが順に読み出しながら実行する方式はどれか。
 処理するプログラムを外部から主記憶装置に格納しておいて、CPUがそれを読込みながら処理を行うコンピュータアーキテクチャの方式の1つです。
 ジョン・フォン・ノイマンによって考案、1945年に提唱されたので「ノイマン型アーキテクチャ」とも呼ばれ、現在に至るまでのコンピュータに採用されています。
 
 ### DMA(Direct Memory Access)制御方式
-入出力装置がCPUを介さずにメモリとの間で直接データを転送する方式です。
 
+入出力装置がCPUを介さずにメモリとの間で直接データを転送する方式です。  
 
 ### アドレス指定方式
-コンピュータの命令は、命令部とアドレス部(オペランド)から構成されています。(ただし命令の種類によってはアドレス部がないものもあります)
-命令の処理対象となるデータのメモリ上の位置がアドレス部で指定されますが、
-このとき各種レジスタおよび主記憶上のアドレスを関連付けて有効アドレスを指定する場合があります。
-このようなアドレス部の情報による有効アドレスの指定方式をアドレス指定方式といいます。
+
+コンピュータの命令は、命令部とアドレス部(オペランド)から構成されています。(ただし命令の種類によってはアドレス部がないものもあります)  
+命令の処理対象となるデータのメモリ上の位置がアドレス部で指定されますが、このとき各種レジスタおよび主記憶上のアドレスを関連付けて有効アドレスを指定する場合があります。  
+このようなアドレス部の情報による有効アドレスの指定方式をアドレス指定方式といいます。  
 
 #### 直接アドレス指定
-アドレス部の値をそのまま有効アドレスとする。
+
+アドレス部の値をそのまま有効アドレスとする。  
 
 #### 間接アドレス指定
-アドレス部の値で主記憶上のアドレスを指定し、そのアドレスに格納されている値を有効アドレスとする。
-アドレス部に20って入ってて、メモリの20番地に行ったら25番地ってアドレスが入ってて、25番地に行ったらデータが入ってたみたいな、そんな感じのたらい回し。
+
+アドレス部の値で主記憶上のアドレスを指定し、そのアドレスに格納されている値を有効アドレスとする。  
+アドレス部に20って入ってて、メモリの20番地に行ったら25番地ってアドレスが入ってて、25番地に行ったらデータが入ってたみたいな、そんな感じのたらい回し。  
 
 #### 指標アドレス指定
-アドレス部の値にインデックスレジスタの値を加えたものを有効アドレスとする。
+
+アドレス部の値にインデックスレジスタの値を加えたものを有効アドレスとする。  
 
 #### 基底アドレス指定
-アドレス部の値にベースレジスタの値を加えたものを有効アドレスとする。
+
+アドレス部の値にベースレジスタの値を加えたものを有効アドレスとする。  
 
 #### 相対アドレス指定
-アドレス部の値にプログラムカウンタの値を加えたものを有効アドレスとする。
+
+アドレス部の値にプログラムカウンタの値を加えたものを有効アドレスとする。  
+
 #### 即値アドレス指定
-アドレス部の値を有効アドレスではなく、そのまま演算対象データとする。
 
+アドレス部の値を有効アドレスではなく、そのまま演算対象データとする。  
 
+### 割込み(Interrupt)  
 
-### 割込み(Interrupt)
-すぐに対処しなくてはならない問題などがシステムに生じたときに、実行中のプログラムの処理をいったん停止し、優先的に事象の解決を図ることを可能にする仕組みです。
-割込みは、実行中のプログラムが原因でCPU内部で発生する内部割込みと、それ以外の(CPU外部で発生する)外部割込みに分類することができます。
+すぐに対処しなくてはならない問題などがシステムに生じたときに、実行中のプログラムの処理をいったん停止し、優先的に事象の解決を図ることを可能にする仕組みです。  
+割込みは、実行中のプログラムが原因でCPU内部で発生する内部割込みと、それ以外の(CPU外部で発生する)外部割込みに分類することができます。  
 
-割込み発生時は次の手順で処理が実行されます。
-**1.ユーザモードから特権モードへの移行**
-割込みが発生すると自動的に特権モード(スーパバイザモード)に切り替わる。
-**2.プログラムレジスタ(プログラムカウンタ)などの退避**
-割込み処理終了後にもとの命令位置に戻れるように現在のプログラムカウンタの値をスタックに退避させる。
-**3.割込み処理ルーチンの開始番地の決定**
-所定の割込み処理の開始アドレスを取得して、プログラムカウンタにセットする。
-**4.割込み処理ルーチンの実行**
-所定の割込み処理
+割込み発生時は次の手順で処理が実行されます。  
 
-プログラムカウンタは、次に実行するべき命令の格納先である主記憶上のアドレスを保持するレジスタです。
-割込み発生時にはプログラムカウンタの値をスタックに退避します。
-そして、割込み処理が終わるとスタックは退避していたアドレスをプログラムカウンタに戻し、中断時の場所から処理を再開します。
+1. ユーザモードから特権モードへの移行  
+   割込みが発生すると自動的に特権モード(スーパバイザモード)に切り替わる。  
+2. プログラムレジスタ(プログラムカウンタ)などの退避  
+   割込み処理終了後にもとの命令位置に戻れるように現在のプログラムカウンタの値をスタックに退避させる。  
+3. 割込み処理ルーチンの開始番地の決定  
+   所定の割込み処理の開始アドレスを取得して、プログラムカウンタにセットする。  
+4. 割込み処理ルーチンの実行  
+   所定の割込み処理  
+
+プログラムカウンタは、次に実行するべき命令の格納先である主記憶上のアドレスを保持するレジスタです。  
+割込み発生時にはプログラムカウンタの値をスタックに退避します。  
+そして、割込み処理が終わるとスタックは退避していたアドレスをプログラムカウンタに戻し、中断時の場所から処理を再開します。  
 
 #### 内部割込み
-実行中のプログラムが原因で起こる割込み
-・ページフォールト
-・ゼロ除算
-・存在しない命令コード
+
+実行中のプログラムが原因で起こる割込み  
+・ページフォールト  
+・ゼロ除算  
+・存在しない命令コード  
 
 #### 外部割込み
-内部割込み以外の原因で起こる割込み
-・タイマー割り込み
 
+内部割込み以外の原因で起こる割込み  
+・タイマー割り込み  
 
 ### MIPS(million instructions per second，ミップス)
-CPUが1秒間に実行可能な命令数を百万単位で表したものです。
-1秒間の命令実行回数を百万単位で表すCPU性能の単位です。2MIPSであれば1秒間に200万回の命令を実行できるという意味になります。
-[【クロック周波数とは】クロック数、MIPSとの違い](https://algorithm.joho.info/computer/clock-frequency/)
 
-50MIPSでは、1秒間に5,000万回の命令を実行できるので、1命令当たりの実行時間は、
-1秒÷5,000万回＝0.00000002＝20ナノ(秒)
+CPUが1秒間に実行可能な命令数を百万単位で表したものです。  
+1秒間の命令実行回数を百万単位で表すCPU性能の単位です。  
+2MIPSであれば1秒間に200万回の命令を実行できるという意味になります。  
 
-100万→1,000,000→1*10^6
-50*10^6
-0.02*10^-6
-20*10^-9
-20マイクロ秒
+[【クロック周波数とは】クロック数、MIPSとの違い](https://algorithm.joho.info/computer/clock-frequency/)  
 
-#### SI単位系
-10^15 : ペタ
-10^12 : テラ
-10^9 : ギガ
-10^6 : メガ
-10^3 : キロ
-0
-10^-3 : ミリ
-10^-6 : マイクロ
-10^-9 : ナノ
-10^-12 : ピコ
+50MIPSでは、1秒間に5,000万回の命令を実行できるので、1命令当たりの実行時間は、  
+1秒÷5,000万回＝0.00000002＝20ナノ(秒)  
 
+100万→1,000,000→1*10^6  
+50*10^6  
+0.02*10^-6  
+20*10^-9  
+20マイクロ秒  
 
+### 投機実行  
 
-
-### 投機実行
-分岐判断の結果が出る前に分岐先を予測して命令を先行実行していく方式で、予測の精度が高ければ処理継続ができるので性能向上が期待できます。
+分岐判断の結果が出る前に分岐先を予測して命令を先行実行していく方式で、予測の精度が高ければ処理継続ができるので性能向上が期待できます。  
 
 ### アウトオブオーダ実行
-依存関係にない複数の命令を，プログラム中での出現順序に関係なく実行する。
 
+依存関係にない複数の命令を，プログラム中での出現順序に関係なく実行する。  
 
 ### クロック周波数
-1秒間に何回のクロックが発振されるかを表す数値(単位はHz:ヘルツ)でプロセッサの性能指標として使われます。
-一般にコンピュータの機種・製品が同じであればクロック周波数が高いほど処理速度は高くなります。
 
-**CPUのクロック周波数と，主記憶を接続するシステムバスのクロック周波数は同一でなくてもよい。**
-正しい。CPUと主記憶、拡張ボードを接続するシステムバスのクロック周波数は「ベースクロック」「外部クロック」などと呼ばれます。
-クロック周波数とベースクロックは同じである必要はありません。
+1秒間に何回のクロックが発振されるかを表す数値(単位はHz:ヘルツ)でプロセッサの性能指標として使われます。  
+一般にコンピュータの機種・製品が同じであればクロック周波数が高いほど処理速度は高くなります。  
 
-**CPUのクロック周波数の逆数が，1秒間に実行できる命令数を表す。**
-必ずしも1命令が1クロックで処理されるわけではないため誤りです。
+**CPUのクロック周波数と，主記憶を接続するシステムバスのクロック周波数は同一でなくてもよい。**  
+正しい。CPUと主記憶、拡張ボードを接続するシステムバスのクロック周波数は「ベースクロック」「外部クロック」などと呼ばれます。  
+クロック周波数とベースクロックは同じである必要はありません。  
 
-**CPUのクロック周波数を2倍にすると，システム全体としての実行性能も2倍になる。**
-実行性能は、主記憶やハードディスクの性能、及びOSの種類、ネットワーク速度などの様々な要因の影響により決まるため、
-CPUのクロック周波数を2倍にしても実行性能が単純に2倍になるとは言えません。
+**CPUのクロック周波数の逆数が，1秒間に実行できる命令数を表す。**  
+必ずしも1命令が1クロックで処理されるわけではないため誤りです。  
 
+**CPUのクロック周波数を2倍にすると，システム全体としての実行性能も2倍になる。**  
+実行性能は、主記憶やハードディスクの性能、及びOSの種類、ネットワーク速度などの様々な要因の影響により決まるため、  
+CPUのクロック周波数を2倍にしても実行性能が単純に2倍になるとは言えません。  
 
+#### 基本 平成30年秋期　問9
 
-平成30年秋期　問9【選択肢ランダム】
-動作クロック周波数が700MHzのCPUで，命令の実行に必要なクロック数とその命令の出現率が表に示す値である場合，このCPUの性能は約何MIPSか。
+動作クロック周波数が700MHzのCPUで，命令の実行に必要なクロック数とその命令の出現率が表に示す値である場合，このCPUの性能は約何MIPSか。  
 
-→
-まず1命令を実行するのに必要な平均クロック数を求めます。
-各命令を実行するのに必要なクロック数に、出現率を乗じたものを足し合わせて、
-　(4×0.3)＋(8×0.6)＋(10×0.1)
-＝1.2＋4.8＋1.0＝7.0
-この計算結果から、1命令に必要な平均クロック数は7クロックであるとわかります。
-CPUの動作クロック数が700MHzなので、1秒間の命令実行可能回数は、
-　700×10^6÷7＝100×10^6回
-MIPSは1秒間に実行できる命令数を百万単位で表す指標なので、このCPUの性能は100MIPSになります。したがって〔ウ〕が正解です。
+→  
 
+まず1命令を実行するのに必要な平均クロック数を求めます。  
+各命令を実行するのに必要なクロック数に、出現率を乗じたものを足し合わせて、  
+　(4×0.3)＋(8×0.6)＋(10×0.1)  
+＝1.2＋4.8＋1.0＝7.0  
+この計算結果から、1命令に必要な平均クロック数は7クロックであるとわかります。  
+CPUの動作クロック数が700MHzなので、1秒間の命令実行可能回数は、  
+　700×10^6÷7＝100×10^6回  
+MIPSは1秒間に実行できる命令数を百万単位で表す指標なので、このCPUの性能は100MIPSになります。したがって〔ウ〕が正解です。  
+
+### パイプライン方式
+
+CPU処理を高速化させるため、1命令を読み出し，解読，実行，書き出しなどのように複数のステージに分け、各ステージを少しずつずらしながら並列に実行することで、全体としての処理時間を短縮させる技法です。  
+パイプライン処理の実行中に、命令同士の依存関係などによりパイプラインへの命令読込みを待機しなければならなかったり、途中まで実行した処理が無駄になってしまい、並列処理の効率が低下してしまう状況のことをハザード(Hazard)といいます。  
+
+一般的にパイプラインハザードは、それが引き起こされる原因によって次の3種類に分類されます。  
+
+#### 構造ハザード
+
+複数の命令によるハードウェア資源(演算器やメモリなど)の競合によって発生するハザード。主にメモリアクセスの競合が発生した場合に発生する。  
+
+#### 制御ハザード(分岐ハザード)
+
+命令の先読みを行っている処理中の分岐命令や割込み処理が原因で発生するハザード。  
+次に実行すべき命令が判明するまでパイプラインへの読込みを停止したり、先読みした処理が無駄になることで処理効率が悪くなってしまう状態。  
+分岐ハザードを発生させないためには、分岐命令を少なくすることが有効な方法です。  
+
+#### データハザード
+
+処理するデータの依存関係が原因で発生するハザード。  
+後続の命令が直前の命令の実行結果を利用する場合などに発生する。  
+
+### スーパースカラ
+
+パイプライン + 並列処理  
+並列実行可能な複数の命令を，複数の演算器に振り分けることによって並列に実行する。  
+
+CPU内部に複数のパイプラインを用意して、パイプラインの各ステージを並列に実行することで処理を高速化する方式です。  
+下図ではパイプラインを複数用意したものをスーパスカラと呼んでいますが、各処理機構がパイプライン化されていなくても、複数の命令を一度に読み込み同時に並列実行するものであればスーパスカラと呼ばれます。  
+スーパスカラの仕組みを最大限に活かすには、並列実行を乱す要因をできる限り解消しておく必要があります。  
+
+![!](https://www.ap-siken.com/kakomon/31_haru/img/08.gif)  
+
+### マルチコアプロセッシング
+
+一つのチップ内に複数のプロセッサコアを実装し，複数のスレッドを並列に実行する。  
+
+### マルチタスク
+
+一つのプロセッサコアで複数のスレッドを切り替えて並列に実行する。  
+
+### パイプライン制御
+
+CPUで処理される1命令を、命令読出し(フェッチ)、解読(デコード)、アドレス計算、オペランド呼出し、実行 というような複数のステージに分け、各ステージを少しずつずらしながら独立した処理機構で並列に実行することで、処理時間全体を短縮させる技法です。  
+通常(非パイプライン)の流れでは、読出し→解読→実行という一連の処理が終了してから次の命令処理に移るというサイクルを繰り返しますが、パイプライン制御では命令処理の完了を待つことなく次の命令の処理に移れるためスループットが向上します。  
+
+![!](https://www.ap-siken.com/kakomon/29_aki/img/08.gif)  
+
+#### 平成28年秋期　問8
+
+すべての命令が5ステージで完了するように設計された，パイプライン制御のコンピュータがある。  
+20命令を実行するのには何サイクル必要となるか。  
+ここで，すべての命令は途中で停止することなく実行でき，パイプラインの各ステージは1サイクルで動作を完了するものとする。  
+
+![!](https://www.ap-siken.com/kakomon/28_aki/img/08_1.gif)  
+
+またパイプラインの処理時間を求める公式「(I＋D－1)×P」を用いても計算することができます。  
+
+![!](https://www.ap-siken.com/kakomon/28_aki/img/08_2.gif)  
+
+命令数(I)が20、深さ(D)が5、ピッチは1サイクルなので、(20＋5－1)×1＝24サイクル  
+
+### VLIW(Very Long Instruction word)
+
+プログラムのコンパイル時に依存関係のない複数の命令を１つの複合命令とし、同時に実行させる手法です。  
+「very long」の名が示すように1つの命令がとても長くなります。  
+
+通常のパイプライン処理では、命令の依存関係などをCPUが判断しながら実行していきますが、VLIWでは、あらかじめ並列動作が可能な状態になっているので、CPU処理のオーバーヘッド減少と高速化が望めます。  
+ただし、ソースコードからプログラムを作成するコンパイラの設計はその分難しくなります。  
+
+### CISC(Complex Instruction Set Computer)
+
+複雑で多機能な命令セットでコンピュータを構成する設計方法です。  
+
+### RISC(Reduced Instruction Set Computer)
+
+CPUに与える命令を短く固定長化し、専用の論理回路で高速に実行できるようにした命令セットでコンピュータを構成する設計方法です。  
+
+### 並列処理を実現するプロセッサのアーキテクチャ
+
+同時に実行できる命令数及びデータ数によって以下の4種類に分類されます。  
+
+### SISD(Single Instruction Single Data)
+
+単一の命令で単一のデータを処理する最もシンプルな方式  
+
+### SIMD(Single Instruction Multiple Data)
+
+単一の命令で複数のデータを処理できる方式。  
+pentiumプロセッサで採用されている。  
+
+### MISD(Multiple Instruction Single Data)
+
+複数の命令で単一のデータを扱う方式。  
+理論上は存在するが実装例はない。  
+
+### MIMD(Multiple Instruction Multiple Data)
+
+複数の命令で複数のデータを扱う方式で、複数のプロセッサを搭載した並列コンピュータ環境が該当する。  
+OSやコンパイラがMIMDに対応している必要がある。  
+
+### GPU(Graphics Processing Unit)
+
+コンピュータにおいて画像処理を専門に担当するハードウェア部品です。  
+動画再生や3DCGのレンダリングなどの定型的かつ大量の演算が要求される処理において、CPUの補助演算装置として機能します。  
+最近では、膨大な計算を必要とする科学シミュレーションや機械学習の分野でもGPUを利用することが増えてきています。  
+
+ディープラーニングでは、システムに学習をさせるときに行列演算を含む大量の並列演算が必要なので、同じ種類の計算を大量に行うことに特化したGPUが活用されています。  
+
+### FPU(Floating Point Unit、浮動小数点演算装置)
+
+浮動小数点演算ユニットをコプロセッサとして用い，浮動小数点演算ができる。  
+
+---
+
+## プロセッサ 計算問題
+
+### 平成31年春期　問9
+
+同一メモリ上で転送するとき，転送元の開始アドレス，転送先の開始アドレス，方向フラグ及び転送語数をパラメタとして指定することでブロック転送ができるCPUがある。図のようにアドレス 1001 から 1004 の内容をアドレス 1003 から 1006 に転送する場合，パラメタとして適切なものはどれか。ここで，転送は開始アドレスから1語ずつ行われ，方向フラグに0を指定するとアドレスの昇順に，1を指定するとアドレスの降順に転送を行うものとする。
+
+![!](https://www.ap-siken.com/kakomon/31_haru/img/09.gif)
+
+→  
+
+転送元の[1001,1002,1003,1004]から、転送先の[1003,1004,1005,1006]にデータを転送することになります。転送先のアドレスである1003～1004番地は、転送元のアドレスでもあるので、1001番地から昇順で転送すると、1001～1002番地の内容で1003～1004番地の内容が上書きされることになり、本来の1003～1004番地の内容（下図の「ううう」「えええ」）を1005～1006番地に転送できません。
+
+![!](https://www.ap-siken.com/kakomon/31_haru/img/09_1.gif)  
+
+適切に転送するには、転送元は1004番から、転送先は1006番からそれぞれ降順で転送しなければなりません。したがって、転送元の開始アドレスに1004、転送先の開始アドレスに1006、方向フラグに1(降順)を指定します。
+
+![!](https://www.ap-siken.com/kakomon/31_haru/img/09_2.gif)  
+
+昇順、降順と言わずに、小さいほうに、大きいほうにって行ってください。  
+まぁ、でも大きいほうからやらないと元のアドレスの内容を上書きしてしまうという概念はわかっていたのでよし。  
+
+### 令和3年秋期　問8
+
+演算レジスタが16ビットのCPUで符号付き16ビット整数x1，x2を16ビット符号付き加算(x1＋x2)するときに，全てのx1，x2の組合せにおいて加算結果がオーバフローしないものはどれか。  
+ここで，|x|はxの絶対値を表し，負数は2の補数で表すものとする。  
+
+→  
+
+数値演算におけるオーバフローとは、コンピュータで数値演算を行った結果、データ格納領域が扱える数値の範囲を超えてしまうエラーです。  
+本問では16ビットの演算レジスタで符号付き加算を行うので、－2^15～2^15-1、すなわち -32768～32767 の整数が扱える範囲となります。  
+したがって、演算結果がこの範囲を超える場合があるかかどうかを検証していくことになります。  
+
+|x1|及び|x2|がともに32,767未満の場合  
+x1とx2の符号が同じときにオーバフローが発生する可能性があります。例えば 20000＋20000 です。  
+
+x1とx2の符号が異なる場合  
+正しい。x1とx2の符号が異なっていれば、互いに打ち消し合うため、演算結果の絶対値はx1及びx2よりも小さくなります。  
+よって、オーバフローが発生することはありません。  
 
 ---
 
 ## メモリ
 
 ### DRAM(Dynamic Random Access Memory)
-コンデンサに電荷を蓄えることにより情報を記憶し、電源供給が無くなると記憶情報も失われる揮発性メモリです。
-集積度を上げることが比較的簡単にできるためコンピュータの主記憶装置として使用されています。
-コンデンサに蓄えられた電荷は時間が経つと失われてしまうので、DRAMでは記憶内容を保持するための「リフレッシュ操作」を随時行う必要があります。
-・読み書きが遅い
-・消費電力が大きい
-・容量を大きくしやすい
-・安い
-・リフレッシュ動作が必要
 
+コンデンサに電荷を蓄えることにより情報を記憶し、電源供給が無くなると記憶情報も失われる揮発性メモリです。  
+集積度を上げることが比較的簡単にできるためコンピュータの主記憶装置として使用されています。  
+コンデンサに蓄えられた電荷は時間が経つと失われてしまうので、DRAMでは記憶内容を保持するための「リフレッシュ操作」を随時行う必要があります。  
+
+・読み書きが遅い  
+・消費電力が大きい  
+・容量を大きくしやすい  
+・安い  
+・リフレッシュ動作が必要  
 
 ### SRAM(Static Random Access Memory)
-メモリセルはフリップフロップで構成され，キャッシュメモリに用いられる。
-・フリップフロップ
-・読み書きが速い
-・消費電力が小さい
-・容量を大きくしにくい
-・高い
+
+メモリセルはフリップフロップで構成され，キャッシュメモリに用いられる。  
+
+・フリップフロップ  
+・読み書きが速い  
+・消費電力が小さい  
+・容量を大きくしにくい  
+・高い  
 
 ### EEPROM(electrically erasable and programmable read-only memory)
-1バイト単位でデータの消去及び書込みが可能な不揮発性のメモリであり，電源遮断時もデータ保持が必要な用途に用いられる。
 
-紫外線で全データ一括消去できる。
-UV-EPROM(紫外線消去型EEPROM)の説明です。
+1バイト単位でデータの消去及び書込みが可能な不揮発性のメモリであり，電源遮断時もデータ保持が必要な用途に用いられる。  
+
+紫外線で全データ一括消去できる。  
+UV-EPROM(紫外線消去型EEPROM)の説明です。  
 
 ### ROM(Read Only Memory)
-読み出し専用で、電源の供給が切れても内容を保持しておくことのできる不揮発性のメモリです。
-内容の書き換えができないという特徴を利用して、変更する必要のないシステムプログラムなどを格納しておく用途に使用されることが多いです。
-一般的にはコンピュータに電源を投入すると、マザーボード上のROMに格納されている「IPL」(Initial Program Loader)というプログラムが起動し、
-その後ハードディスク内のブートプログラム、続いてOSという順で起動して操作可能な状態になります。
+
+読み出し専用で、電源の供給が切れても内容を保持しておくことのできる不揮発性のメモリです。  
+内容の書き換えができないという特徴を利用して、変更する必要のないシステムプログラムなどを格納しておく用途に使用されることが多いです。  
+一般的にはコンピュータに電源を投入すると、マザーボード上のROMに格納されている「IPL」(Initial Program Loader)というプログラムが起動し、その後ハードディスク内のブートプログラム、続いてOSという順で起動して操作可能な状態になります。  
 
 ### フラッシュメモリ
-電気的に書き換え可能であり、電源を切ってもデータが消えない半導体メモリです。
-区分的にはEEPROM(Electrically Erasable Programmable ROM)の一種ですが、1バイト単位の書込みを行う従来のEEPROMとは異なりブロック単位での書き換えを行います。
-急激な低価格化の影響もあり、USBメモリやメモリーカードの内部に組み込まれ、
-携帯電話，デジタルカメラ，デジタルオーディオプレーヤーなどの記憶媒体として広く普及しています。
 
+電気的に書き換え可能であり、電源を切ってもデータが消えない半導体メモリです。  
+区分的にはEEPROM(Electrically Erasable Programmable ROM)の一種ですが、1バイト単位の書込みを行う従来のEEPROMとは異なりブロック単位での書き換えを行います。  
 
+急激な低価格化の影響もあり、USBメモリやメモリーカードの内部に組み込まれ、携帯電話，デジタルカメラ，デジタルオーディオプレーヤーなどの記憶媒体として広く普及しています。  
+
+※ブロック単位で電気的に内容の消去ができる。  
+
+### 相変化(そうへんか)メモリ(PCM:Phase Change Memory又はPRAM)
+
+結晶状態と非結晶状態の違いを利用して情報を記憶する不揮発性メモリ  
+
+カルコゲナイド系合金の結晶状態と非結晶状態(アモルファス状態)における電気抵抗の差を利用した不揮発性メモリです。  
+2つの状態は電気的に移行可能なので内容の書き換えが可能です。  
+DRAMに近い記憶密度を実現可能であり、DVD-RAMの基本材料としても用いられています。  
+
+### ライトバックとライトスルー
+
+キャッシュメモリと主記憶の同期をとるための方式で、それぞれの特徴は次の通りです。  
 
 ### ライトスルー方式(write through)
-CPUから書き込む命令が出たときにキャッシュメモリと同時に主記憶にも書き込む方式。データの整合性は得られるが処理速度は低下する。
-キャッシュミスが発生すると、キャッシュ内の必要のないデータを主記憶に移動し、要求されたデータを主記憶からキャッシュにコピーします。
-→常に主記憶とキャッシュの内容が一致するため一貫性の確保は容易だが、主記憶への書き込みが頻繁に行われるので遅い
+
+CPUから書き込む命令が出たときにキャッシュメモリと同時に主記憶にも書き込む方式。  
+
+データの整合性は得られるが処理速度は低下する。  
+
+キャッシュミスが発生すると、キャッシュ内の必要のないデータを主記憶に移動し、要求されたデータを主記憶からキャッシュにコピーします。  
+→常に主記憶とキャッシュの内容が一致するため一貫性の確保は容易だが、主記憶への書き込みが頻繁に行われるので遅い  
 
 ### ライトバック方式(write back)
-CPUから書き込む命令が出たときにキャッシュメモリだけに書き込む方式。主記憶への書き込みはキャッシュメモリからデータが追い出されるときに行われる。
-該当データがキャッシュから追い出されたタイミングで主記憶に書き出すので、一貫性を保つために書き戻し処理が必要となります。
-→主記憶とキャッシュの内容が一致しないため一貫性を保つための制御が複雑になるが、主記憶への書き込み回数が少ないため速い
 
+CPUから書き込む命令が出たときにキャッシュメモリだけに書き込む方式。  
+主記憶への書き込みはキャッシュメモリからデータが追い出されるときに行われる。  
+高速に書き込みできるがデータの整合性を保つための制御が余分に必要になる。  
 
+該当データがキャッシュから追い出されたタイミングで主記憶に書き出すので、一貫性を保つために書き戻し処理が必要となります。  
+→主記憶とキャッシュの内容が一致しないため一貫性を保つための制御が複雑になるが、主記憶への書き込み回数が少ないため速い  
 
 ### キャッシュメモリ
-主記憶とは異なる半導体(SRAM)を使用した、小容量ですが非常に高速にアクセスできるメモリです。
-主記憶へのアクセス速度はCPUの動作速度と比較すると随分と遅く、この速度差からCPUが主記憶にアクセスしている間はCPUに待ち時間が生じ、処理効率の低下を招いてしまいます。
-キャッシュメモリは、CPUと主記憶の間の位置で両者の速度差を埋め、CPUの処理効率を向上させる目的でコンピュータに搭載されます。
 
-**主記憶から読み出したデータをキャッシュメモリに保持し，CPUが後で同じデータを読み出すときのデータ転送を高速に行う。**
-正しい。1度目のアクセスについては主記憶からの読出しとなりますが、2度目以降のアクセスでは、
-キャッシュメモリ上にコピーされたデータを参照するだけで済むため高速に読みだせます。
+主記憶とは異なる半導体(SRAM)を使用した、小容量ですが非常に高速にアクセスできるメモリです。  
+主記憶へのアクセス速度はCPUの動作速度と比較すると随分と遅く、この速度差からCPUが主記憶にアクセスしている間はCPUに待ち時間が生じ、処理効率の低下を招いてしまいます。  
+キャッシュメモリは、CPUと主記憶の間の位置で両者の速度差を埋め、CPUの処理効率を向上させる目的でコンピュータに搭載されます。  
 
-**主記憶からキャッシュメモリへの命令の読出しと，主記憶からキャッシュメモリへのデータの読出しを同時に行うことによって，データ転送を高速に行う。**
-キャッシュメモリは並列処理ができる装置ではありません。
+**主記憶から読み出したデータをキャッシュメモリに保持し，CPUが後で同じデータを読み出すときのデータ転送を高速に行う。**  
+正しい。1度目のアクセスについては主記憶からの読出しとなりますが、2度目以降のアクセスでは、  
+キャッシュメモリ上にコピーされたデータを参照するだけで済むため高速に読みだせます。  
 
-**主記憶から読み出したデータをキャッシュメモリに保持し，命令を並列に処理することによって演算を高速に行う。**
-命令の並列実行はパイプラインやマルチプロセッサによって実現されます。並列処理とキャッシュメモリは関係ありません。
+**主記憶からキャッシュメモリへの命令の読出しと，主記憶からキャッシュメモリへのデータの読出しを同時に行うことによって，データ転送を高速に行う。**  
+キャッシュメモリは並列処理ができる装置ではありません。  
 
-**主記憶から読み出した命令をキャッシュメモリに保持し，キャッシュメモリ上でデコードして実行することによって演算を高速に行う。**
-命令のデコードはCPUが行います。
-プログラムカウンタ→主記憶から命令読みだし→命令レジスタ→命令デコード(CPU)→命令実行
+**主記憶から読み出したデータをキャッシュメモリに保持し，命令を並列に処理することによって演算を高速に行う。**  
+命令の並列実行はパイプラインやマルチプロセッサによって実現されます。並列処理とキャッシュメモリは関係ありません  。
 
+**主記憶から読み出した命令をキャッシュメモリに保持し，キャッシュメモリ上でデコードして実行することによって演算を高速に行う。**  
+命令のデコードはCPUが行います。  
+プログラムカウンタ→主記憶から命令読みだし→命令レジスタ→命令デコード(CPU)→命令実行  
 
 ### 実行アクセス時間
-キャッシュメモリと主記憶が存在するとき、実際の1アクセスに要する平均時間を実効アクセス時間といいます。
 
+キャッシュメモリと主記憶が存在するとき、実際の1アクセスに要する平均時間を実効アクセス時間といいます。  
 
-### 実効アクセス時間を求めるための公式
-$実行アクセス時間 = (キャッシュメモリのアクセス時間×ヒット率)＋主記憶のアクセス時間×(1－ヒット率)$
+``` math : 実効アクセス時間を求めるための公式
+$実行アクセス時間 = (キャッシュメモリのアクセス時間×ヒット率)＋主記憶のアクセス時間×(1－ヒット率)$  
+```
 
-平成26年春期　問10
-主記憶のアクセス時間60ナノ秒，キャッシュメモリのアクセス時間10ナノ秒のシステムがある。
-キャッシュメモリを介して主記憶にアクセスする場合の実効アクセス時間が15ナノ秒であるとき，キャッシュメモリのヒット率は幾らか。
+#### 基本 平成26年春期　問10
 
-→
-今回は実効アクセス時間がわかっているのでヒット率を"N"として計算します。
-(10×N)＋(60×(1－N))＝15
-10N＋60－60N＝15
-－50N＝－45
-N＝0.9
-計算結果からキャッシュメモリのヒット率は0.9となります。
+主記憶のアクセス時間60ナノ秒，キャッシュメモリのアクセス時間10ナノ秒のシステムがある。  
+キャッシュメモリを介して主記憶にアクセスする場合の実効アクセス時間が15ナノ秒であるとき，キャッシュメモリのヒット率は幾らか。  
 
+→  
+
+今回は実効アクセス時間がわかっているのでヒット率を"N"として計算します。  
+(10×N)＋(60×(1－N))＝15  
+10N＋60－60N＝15  
+－50N＝－45  
+N＝0.9  
+計算結果からキャッシュメモリのヒット率は0.9となります。  
 
 ### 平均メモリアクセス時間
-キャッシュメモリと主記憶が存在する場合、実際の1アクセスに要する平均時間を平均(実効)アクセス時間といい、以下の公式で計算することができます。
-$(キャッシュメモリのアクセス時間×ヒット率)＋主記憶のアクセス時間×(1－ヒット率)$
-キャッシュメモリと主記憶では、キャッシュメモリのほうが圧倒的に高速にアクセスできるため、
-平均アクセス時間は「ヒット率が高いほど短く、ヒット率が低いほど長くなる」関係にあります。
 
-・平均メモリアクセス時間が増加する原因は「ヒット率の低下」
+キャッシュメモリと主記憶が存在する場合、実際の1アクセスに要する平均時間を平均(実効)アクセス時間といい、以下の公式で計算することができます。  
 
+$(キャッシュメモリのアクセス時間×ヒット率)＋主記憶のアクセス時間×(1－ヒット率)$  
+
+キャッシュメモリと主記憶では、キャッシュメモリのほうが圧倒的に高速にアクセスできるため、平均アクセス時間は「ヒット率が高いほど短く、ヒット率が低いほど長くなる」関係にあります。  
+
+・平均メモリアクセス時間が増加する原因は「ヒット率の低下」  
+
+#### 令和元年秋期　問10
+
+容量がaMバイトでアクセス時間がxナノ秒の命令キャッシュと，容量がbMバイトでアクセス時間がyナノ秒の主記憶をもつシステムにおいて，CPUからみた，主記憶と命令キャッシュとを合わせた平均アクセス時間を表す式はどれか。ここで，読み込みたい命令コードがキャッシュに存在しない確率をrとし，キャッシュメモリ管理に関するオーバヘッドは無視できるものとする。  
+
+→
+
+メモリの平均アクセス時間に関する問題は頻出です。  
+この種の問題はメモリの容量を問題文にいれたり、存在しない確率をrとしてみたり、受験者を戸惑わせようとする目論見が見えますが、主記憶の平均アクセス時間の求め方は、  
+
+$キャッシュメモリのアクセス時間×ヒット率＋主記憶のアクセス時間×(1－ヒット率)$  
+
+なので、メモリの容量は関係ありません。ここで立式に係る値は次の4つです。  
+キャッシュメモリのアクセス時間＝x  
+ヒット率＝存在しない確率の逆なので (1－r)  
+主記憶のアクセス時間＝y  
+ヒットしない確率＝r  
+これを公式に代入すると「(1－r)・x＋r・y」になります。したがって「イ」が正解です。  
+
+一般にキャッシュメモリ容量が大きくなればヒット率は上昇するはずです。  
+したがってヒット率を計算するときにはキャッシュメモリと主記憶の容量が計算要素として使われることになります。  
+しかし、この問題の場合はヒット率が定数として問題文の条件に示されているので、各メモリ容量を計算式に含める必要はない訳です。  
+
+### メモリインタリーブ
+
+物理上は1つである主記憶領域を、同時アクセス可能な複数の論理的な領域(バンク)に分け、これに並列アクセスすることで見かけ上のアクセス時間の短縮を図るメモリアクセス高速化技術です。  
+
+※複数のバンクに割り振った連続したアドレスにアクセスしたとき，アクセス時間を短くするのが目的  
+※主記憶を複数の独立したグループに分けて，各グループに交互にアクセスすることによって，主記憶へのアクセスの高速化を図るもの  
+※主記憶を複数のバンクに分けて，CPUからのアクセス要求を並列的に処理できるようにする。  
+
+![!](https://www.ap-siken.com/kakomon/02_aki/img/09.gif)  
 
 ### パリティチェック
-データ通信やメモリチェックなどにおいてデータのビット誤りを検出する最もシンプルな方法の一つです。
-一定長のビット列（通常は7～8ビット）ごとに1ビットの検査ビット（パリティビット）を付加し、検査側が受信データとパリティビットを照合することで誤りを検出します。
-**パリティチェックは基本的に誤り訂正の機能を持たないため**、誤りが検出されたときには送信側に再送要求を行います（データ通信の場合）。
-また、誤りが奇数個であれば検出できますが、偶数個の誤りは検出できないという特徴があります。
+
+データ通信やメモリチェックなどにおいてデータのビット誤りを検出する最もシンプルな方法の一つです。  
+一定長のビット列（通常は7～8ビット）ごとに1ビットの検査ビット（パリティビット）を付加し、検査側が受信データとパリティビットを照合することで誤りを検出します。  
+**パリティチェックは基本的に誤り訂正の機能を持たないため**、誤りが検出されたときには送信側に再送要求を行います（データ通信の場合）。  
+また、誤りが奇数個であれば検出できますが、偶数個の誤りは検出できないという特徴があります。  
+→  
+エラーの訂正があるのはハミング符号  
+
+---
+
+## メモリ 計算問題
+
+### 平成31年春期　問10
+
+バス幅が16ビット，メモリサイクルタイムが80ナノ秒で連続して動作できるメモリがある。このメモリのデータ転送速度は何Mバイト／秒か。ここで，Mは10^6を表す。  
+
 →
-エラーの訂正があるのはハミング符号
+
+``` math
+設問中の「メモリサイクルタイムが80ナノ秒」という条件より、1秒間のデータ転送回数は以下のように計算できます。
+
+　1秒÷80ナノ秒＝1,000,000,000÷80
+＝12,500,000(回)
+
+バス幅は16ビット=2バイトなので1秒間に伝送されるデータ量は、
+
+　2×12,500,000＝25,000,000＝25(Mバイト／秒)
+```
 
 ---
 
 ## 入出力デバイス
 
-### デイジーチェーン接続
-パラレル転送規格のSCSI(スカジー)などで用いられる接続方法で、「PC－周辺機器－周辺機器」というように、PCを起点として複数の周辺機器を直列で(数珠つなぎのように)接続する方法です。
-周辺機器同士が直接繋がるということがポイント。
-例:Thunderbolt接続コネクタが2口ある4kディスプレイ2台を，PCのThunderbolt接続ポートから1台目のディスプレイにケーブルで接続し，さらに，1台目のディスプレイと2台目のディスプレイとの間をケーブルで接続する。
+### デイジーチェーン接続  
 
+パラレル転送規格のSCSI(スカジー)などで用いられる接続方法で、「PC－周辺機器－周辺機器」というように、PCを起点として複数の周辺機器を直列で(数珠つなぎのように)接続する方法です。  
+周辺機器同士が直接繋がるということがポイント。  
+
+例:Thunderbolt接続コネクタが2口ある4kディスプレイ2台を，PCのThunderbolt接続ポートから1台目のディスプレイにケーブルで接続し，さらに，1台目のディスプレイと2台目のディスプレイとの間をケーブルで接続する。  
+
+### DisplayPort
+
+ディジタル映像インタフェースのDVIで問題とされていたコネクタサイズの大きさ、音声伝送ができないといった点を解決し、後継規格とするべく業界団体のVESAにより策定されたインタフェースです。  
+8K解像度(7680×4320)の伝送にも対応する(v1.4)など、下記4つの映像インタフェースのうちでスペック上は最も優れています。  
+
+![!](https://www.ap-siken.com/kakomon/01_aki/img/11.gif)  
+
+・映像と音声をパケット化して，シリアル伝送できる。  
+・長方形の1角が欠けた形状のコネクタで、DVIより小型です。  
+・ディジタル専用です。アナログ・ディジタル両用なのはDVI-Iです。  
+・HDCPという著作権保護技術に対応しています。  
+HDCPは再生機器からディスプレイなどの表示機器にディジタル信号を送るときに送受信経路を暗号化する技術です。  
 
 ### USB3.0
-現在最も普及している周辺機器接続のためのシリアルインターフェイスのバージョン3に当たる規格です。
-USB2.0から3.0への進化で最も特徴的なのが最大転送速度の大幅な向上です。
-2.0では"ハイスピードモード"の480Mbpsが最大でしたが、3.0では5Gbpsの"スーパースピード"が加わっています。さらに2013年8月に策定されたバージョン3.1では、
-3.0の2倍となる10Gbpsの転送を可能にする"スーパースピードプラス"が登場しています。
+
+現在最も普及している周辺機器接続のためのシリアルインターフェイスのバージョン3に当たる規格です。  
+
+USB2.0から3.0への進化で最も特徴的なのが最大転送速度の大幅な向上です。(およそ10倍)  
+
+2.0では"ハイスピードモード"の480Mbpsが最大でしたが、3.0では5Gbpsの"スーパースピード"が加わっています。  
+さらに2013年8月に策定されたバージョン3.1では、3.0の2倍となる10Gbpsの転送を可能にする"スーパースピードプラス"が登場しています。  
+
+※USB2.0は半二重通信であるが，USB3.0は完全な全二重通信を実現しています。  
+※バスパワーによる最大供給電流は900mA（約80%増）に大幅増強されています。(USB2.0は500ミリアンペア)  
+※ピン数は5本(USB2.0)から9本に増えましたが、ピン形状の工夫により後方互換性を保っているのでUSB2.0のケーブルも指すことができます。
+
+### USB Type-C
+
+2021年現在、使用されているUSB端子の規格には、USB-A、USB-B、USB-Cがあります。  
+さらにAとBにはMiniおよびMicroタイプが存在します。  
+USB Type-Cは、2015年策定のUSB3.1と同時に策定された比較的新しいUSBコネクタの規格です。  
+最も大きな特徴は、上下左右が対称なのでどちらの向きでも接続できることです。  
+
+![!](https://www.ap-siken.com/kakomon/03_aki/img/10.gif)  
 
 ### IEEE1394
-音声，映像などに適したアイソクロナス転送を採用しており，ブロードキャスト転送モードをもつシリアルインタフェースである。
+
+音声，映像などに適したアイソクロナス転送を採用しており，ブロードキャスト転送モードをもつシリアルインタフェースである。  
 
 ### SATA(Serial ATA)
-PCと周辺機器とを接続するATA仕様をシリアル化したものである。
+
+PCと周辺機器とを接続するATA仕様をシリアル化したものである。  
 
 ### 1000BASE-T
-1クロックで2ビットの情報を伝送する4対の信号線を使用し，最大1Gビット／秒のスループットをもつインタフェースである。
 
+1クロックで2ビットの情報を伝送する4対の信号線を使用し，最大1Gビット／秒のスループットをもつインタフェースである。  
 
-USB-A、USB-B、USB-Cがあります。さらにAとBにはMiniおよびMicroタイプが存在します。
+USB-A、USB-B、USB-Cがあります。さらにAとBにはMiniおよびMicroタイプが存在します。  
 
-USB-Aはいつも上下を間違う奴。
-USB-Bは四角い奴。正直あんまり見たことない。
-USB-Cは上下左右が対称。
-MiniとMicroは言葉で説明するの難しいな。
-USB-AのMiniが上に5つの端子と台形を逆さまにしたような端子。
-USB-BのMiniが上に5つの端子と四角の端子。
-USB-AのMicroが下に5つの端子と全体的に四角い。
-USB-BのMicroが下に5つの端子と外側の枠が台形を逆さまにしたような感じ。
+USB-Aはいつも上下を間違う奴。  
+USB-Bは四角い奴。正直あんまり見たことない。  
+USB-Cは上下左右が対称。  
+MiniとMicroは言葉で説明するの難しいな。  
+USB-AのMiniが上に5つの端子と台形を逆さまにしたような端子。  
+USB-BのMiniが上に5つの端子と四角の端子。  
+USB-AのMicroが下に5つの端子と全体的に四角い。  
+USB-BのMicroが下に5つの端子と外側の枠が台形を逆さまにしたような感じ。  
 
-Miniは上。Microは下。
-どちらも端子の数は5つ。
-MiniはMicroに比べて端子が少し大きめ。
-基本的に端子のあるほうが黒い。
+Miniは上。Microは下。  
+どちらも端子の数は5つ。  
+MiniはMicroに比べて端子が少し大きめ。  
+基本的に端子のあるほうが黒い。  
 
-ミニが上。マイクロが下。
-先に上、次が下。
-台形、四角、四角、台形。
-
+ミニが上。マイクロが下。  
+先に上、次が下。  
+台形、四角、四角、台形。  
 
 ### デバイスドライバ(Device Driver)
-コンピュータに接続された周辺機器を管理・制御するための抽象化したインタフェースを、
-他のアプリケーションソフトウェアに対して提供するためのソフトウェア／プログラムです。単にドライバともいいます。
-アプリケーションは、デバイスドライバを介してプログラム上からハードウェアを操作できるようになっています。
 
-周辺機器を制御するためには機器固有の仕様や設定内容を管理する必要があります。
+コンピュータに接続された周辺機器を管理・制御するための抽象化したインタフェースを、他のアプリケーションソフトウェアに対して提供するためのソフトウェア／プログラムです。  
+単にドライバともいいます。  
+アプリケーションは、デバイスドライバを介してプログラム上からハードウェアを操作できるようになっています。  
+
+周辺機器を制御するためには機器固有の仕様や設定内容を管理する必要があります。  
 周辺機器の種類は多く、OSにあらかじめ全てのデバイスドライバを搭載しておくことは現実的ではないため、新しい周辺機器を接続するときに、
-その製品に対応したデバイスドライバを別モジュールとしてOSに組み込む仕組みになっています。
+その製品に対応したデバイスドライバを別モジュールとしてOSに組み込む仕組みになっています。  
 
-マウスやキーボード、ディスプレイ及びUSB接続などの一般的に使用される周辺機器についてはOSに標準でデバイスドライバが組み込まれていますが、
-その他の周辺機器を接続し使用する際には機種にあったドライバのインストールが必要となります。
-現在では、プラグアンドプレイによるインストールが一般化しているため、昔と比較するとインストールの煩雑さが軽減されています。
-
+マウスやキーボード、ディスプレイ及びUSB接続などの一般的に使用される周辺機器についてはOSに標準でデバイスドライバが組み込まれていますが、その他の周辺機器を接続し使用する際には機種にあったドライバのインストールが必要となります。  
+現在では、プラグアンドプレイによるインストールが一般化しているため、昔と比較するとインストールの煩雑さが軽減されています。  
 
 ### SDカード
-メモリカードの規格の1つです。携帯電話やスマートフォン、ディジタルカメラやゲーム機などの記憶装置として利用されるほか、使いやすく持ち運びしやすいのでUSBメモリとともに手軽な記憶メディアとして使用されています。
 
-SDカードを記憶容量で分けると以下の3規格が存在します。
+メモリカードの規格の1つです。  
+携帯電話やスマートフォン、ディジタルカメラやゲーム機などの記憶装置として利用されるほか、使いやすく持ち運びしやすいのでUSBメモリとともに手軽な記憶メディアとして使用されています。  
+
+SDカードを記憶容量で分けると以下の3規格が存在します。  
 
 #### SD
-ファイルシステム : FAT16
-容量上限 : 2G
-著作権保護 : CPRM
+
+ファイルシステム : FAT16  
+容量上限 : 2G  
+著作権保護 : CPRM  
 
 #### SDHC
-ファイルシステム : FAT32
-容量上限 : 32G
-著作権保護 : CPRM
 
-SDメモリカードの4分の1以下の小型サイズで，最大32Gバイトの容量をもつ。
-micro SDHCの説明です。
+ファイルシステム : FAT32  
+容量上限 : 32G  
+著作権保護 : CPRM  
+
+SDメモリカードの4分の1以下の小型サイズで，最大32Gバイトの容量をもつ。  
+micro SDHCの説明です。  
 
 #### SDXC(SD eXtended Capacity)
-ファイルシステム : exFAT
-容量上限 : 2T
-著作権保護 : CPXM
-2009年に策定された規格で、ファイルシステムにexFATを採用することで記憶容量の上限を2Tバイトまで引き上げたものです。また標準サイズのほかにMicroSDXCという小さいタイプもあります。
 
-著作権保護技術としてAACSを採用し，従来のSDメモリカードよりもセキュリティが強化された。
-SDXCに採用されている著作権保護技術は、CPRMを発展させたCPXMです。
+ファイルシステム : exFAT  
+容量上限 : 2T  
+著作権保護 : CPXM  
+2009年に策定された規格で、ファイルシステムにexFATを採用することで記憶容量の上限を2Tバイトまで引き上げたものです。  
+また標準サイズのほかにMicroSDXCという小さいタイプもあります。  
 
-
+著作権保護技術としてAACSを採用し，従来のSDメモリカードよりもセキュリティが強化された。  
+SDXCに採用されている著作権保護技術は、CPRMを発展させたCPXMです。  
 
 ### 磁気ディスク装置
 
-磁気ディスクへのアクセス時間は、平均シーク時間＋平均回転待ち時間＋データ転送時間で求められます。
+磁気ディスクへのアクセス時間は、平均シーク時間＋平均回転待ち時間＋データ転送時間で求められます。  
 
-**アクセス時間は，回転速度を上げるか位置決め時間を短縮すると短くなる。**
-正しい。
+**アクセス時間は，回転速度を上げるか位置決め時間を短縮すると短くなる。**  
+正しい。  
 
-**アクセス時間は，処理装置の前処理時間，データ転送後の後処理時間も含む。**
-アクセス時間は、シーク時間と回転待ち時間とデータ転送時間の合計です。前後の処理時間は含みません。
+**アクセス時間は，処理装置の前処理時間，データ転送後の後処理時間も含む。**  
+アクセス時間は、シーク時間と回転待ち時間とデータ転送時間の合計です。前後の処理時間は含みません。  
 
-**データ転送速度は，回転速度と回転待ち時間で決まる。**
-データの転送速度は回転速度とトラックあたりの記憶容量で決まります。
+**データ転送速度は，回転速度と回転待ち時間で決まる。**  
+データの転送速度は回転速度とトラックあたりの記憶容量で決まります。  
 
-**記憶容量は，トラック当たりの記憶容量と1シリンダ当たりのトラック数だけで決まる。**
-磁気ディスク装置の記憶容量は「トラック当たりの記憶容量×1シリンダ当たりのトラック数×シリンダ数」で決まります。
-
+**記憶容量は，トラック当たりの記憶容量と1シリンダ当たりのトラック数だけで決まる。**  
+磁気ディスク装置の記憶容量は「トラック当たりの記憶容量×1シリンダ当たりのトラック数×シリンダ数」で決まります。  
 
 #### 平均シーク時間(シークタイム)
-磁気ディスクのヘッドが、目的のデータが保存されている位置まで移動するのにかかる時間の平均
+
+磁気ディスクのヘッドが、目的のデータが保存されている位置まで移動するのにかかる時間の平均  
 
 #### 平均回転待ち時間(サーチタイム)
-ヘッドの移動が完了した後、読み出すレコードの先頭が磁気ヘッドの位置まで磁気ディスクが回転してくるのを待つ時間の平均。
-ディスクが1回転するのにかかる時間の半分が**平均回転待ち時間**となる。
-##### ディスクの平均回転待ち時間
-`ディスクが1回転に要する時間の1/2。`
-なんで？
+
+ヘッドの移動が完了した後、読み出すレコードの先頭が磁気ヘッドの位置まで磁気ディスクが回転してくるのを待つ時間の平均。  
+ディスクが1回転するのにかかる時間の半分が**平均回転待ち時間**となる。  
+
+#### ディスクの平均回転待ち時間
+
+`ディスクが1回転に要する時間の1/2。`  
+なんで？  
 
 <https://www.seplus.jp/dokushuzemi/fe/fenavi/easy_calc/disc/>  
-**平均**が肝。
-運が良ければ、ヘッドの真下に既にデータがある。→0。
-運が悪ければ、1回転するのを待つ必要がある。→1。
-それを平均すると0.5になるので、**平均**回転待ち時間は0.5というわけ。
-わかってしまえば、何ということはないけど、これは言われるまで気が付かない。
+**平均**が肝。  
+運が良ければ、ヘッドの真下に既にデータがある。→0。  
+運が悪ければ、1回転するのを待つ必要がある。→1。  
+それを平均すると0.5になるので、**平均**回転待ち時間は0.5というわけ。  
 
 #### データ転送時間
-目的のデータを読み出すのに要する時間
 
-
+目的のデータを読み出すのに要する時間  
 
 ### dpi(dots per inch)
-1インチの長さを何ピクセル(画素)で表現しているかを示す単位です。dpiが大きくなるほど面積当たりのピクセル数が増加するので、より繊細な画像となります。
 
-平成31年春期　問11【選択肢ランダム】
-96dpiのディスプレイに12ポイントの文字をビットマップで表示したい。正方フォントの縦は何ドットになるか。ここで，1ポイントは1／72インチとする。
+1インチの長さを何ピクセル(画素)で表現しているかを示す単位です。  
+dpiが大きくなるほど面積当たりのピクセル数が増加するので、より繊細な画像となります。  
 
-→
-まず、12ポイントをインチに変換すると、
-　12×1／72＝12／72＝1／6インチ
-になります。
-つまり、12ポイントの文字を描画すると表示サイズは1／6インチになるということです。本問のディスプレイは、1インチが96ピクセル(ドット)で構成されているので、1／6インチが何ドットに相当するかを計算すると、
-　96ドット×1／6＝16ドット
-1／6インチは16ドットに相当することになります。
+#### 基本 平成31年春期　問11
 
+96dpiのディスプレイに12ポイントの文字をビットマップで表示したい。  
+正方フォントの縦は何ドットになるか。ここで，1ポイントは1／72インチとする。  
 
+→  
+
+まず、12ポイントをインチに変換すると、  
+　12×1／72＝12／72＝1／6インチ  
+になります。  
+つまり、12ポイントの文字を描画すると表示サイズは1／6インチになるということです。本問のディスプレイは、1インチが96ピクセル(ドット)で構成されているので、1／6インチが何ドットに相当するかを計算すると、  
+　96ドット×1／6＝16ドット  
+1／6インチは16ドットに相当することになります。  
 
 ### 3Dプリンタ
-入力された3DCGデータを設計図として3次元の物体を造形する機器です。
-複雑な内部形状や中空形状などを表現できる利点もあり、製造業を中心に建築・医療・教育・航空宇宙・先端研究など幅広い分野で活用が進んでいます。
-熱溶解積層方式などによって，立体物を造形する。
 
+入力された3DCGデータを設計図として3次元の物体を造形する機器です。  
+複雑な内部形状や中空形状などを表現できる利点もあり、製造業を中心に建築・医療・教育・航空宇宙・先端研究など幅広い分野で活用が進んでいます。  
+熱溶解積層方式などによって，立体物を造形する。  
+
+### アクティブシャッタ方式
+
+1フレームごとに右目用、左目用の画像を交互に表示し、眼鏡がそのタイミングに同期して一方の目だけを遮光することによって、立体視を可能とする方式です。  
+それぞれを全画面で映し出せるので画像の解像度が落ちない反面、元のフレームレートを維持するには倍速で表示する必要があること、ディスプレイと眼鏡のタイミングを一致させるのが難しいという特徴があります。  
+フレーム・シーケンシャル方式とも呼ばれます。  
+
+![!](https://www.ap-siken.com/kakomon/02_aki/img/11.gif)  
+
+### パララックスバリア方式
+
+専用の特殊なディスプレイに右目用，左目用の映像を同時に描画し，網目状のフィルタを用いてそれぞれの映像が右目と左目に入るようにして，裸眼立体視を可能とする。  
+左右の目の視差を利用するパララックスバリア方式の説明です。裸眼で3D映像の立体視が可能です。  
+
+### アナグリフ方式
+
+赤青のカラーフィルタが付いた眼鏡を使用するあれ。  
+ディスプレイに赤色と青色で右目用，左目用の映像を重ねて描画し，一方のリム(フレームにおいてレンズを囲む部分)に赤，他方のリムに青のフィルタを付けた眼鏡で見ることによって，立体視を可能とする。  
+
+### 偏光フィルター方式
+
+ディスプレイに右目用，左目用の映像を同時に描画し，フィルタを用いてそれぞれの映像の光の振幅方向を回転して，透過する振幅方向が左右で異なる偏光眼鏡で見ることによって，立体視を可能とする。
+偏光フィルター方式の説明です。偏光ディスプレイと偏光眼鏡を使用します。
+
+### 有機ELディスプレイ
+
+電圧を加えると発光する有機化合物で出来た発光層を使用したディスプレイです。  
+昨今では、テレビ画面やPC用のディスプレイだけでなく、携帯電話のディスプレイとしても実用化されています。  
+
+「有機EL」とは、英語の「オルガニック・エレクトロ・ルミネッセンス（organic electro-luminescence）」の略
+
+有機ELディスプレイを液晶ディスプレイと比較すると以下のような特徴があります。  
+
+・視野角が180度に限りなく近い  
+・発光そのものに必要な電圧が数V程度と低い  
+・非常に薄くつくることが可能  
+・高コントラスト比を達成できる  
+・価格が高い  
+・寿命が短い  
+・大型化が難しい  
+
+### CRT(ブラウン管)ディスプレイ
+
+電子ビームが発光体に衝突して生じる発光で表示する。  
+
+### 液晶ディスプレイ
+
+透過する光の量を制御することで表示する。  
+
+### プラズマディスプレイ
+
+放電によって発生した紫外線で，蛍光体を発光させて表示する。  
+
+### ZigBee(ジグビー)
+
+同じ無線通信規格のBluetoothよりも低速(20Kbps-250kbps)で伝送距離も短い(30cm程度)ながら、乾電池程度の電力で数年連続で稼働できる省電力性と低コストの利点を有する無線通信規格です。  
+
+規格のベース部分にはWPAN(Wireless Personal Area Network)の規格であるIEEE 802.15.4が使用され、主にIoTなどによるセンサネットワークの構築を目的として策定されました。また最大接続台数もBluetoothと比較して非常に多く、理論上は最大65,536台の端末を無線通信で接続可能です。  
+
+ZigBeeの名称はミツバチ(Bee)が花の周りをジグザグに飛び回る行動にちなんで名付けられました。  
 
 ---
 
 ## バス
 
 ### アドレスバス
-CPUなどがデータの読書き対象となるメモリ上の番地(アドレス)を伝送するための信号伝達経路です。
-アドレスバスは複数の信号線から成り、各信号線が0又は1を伝えます。
-このため信号線が8本であれば28＝256種類のアドレス、16本では216＝65,536種類というように信号線の多さによって扱えるメモリ範囲の大きさが決まります。
-バスに使われている信号線の数をバス幅といいます。
 
-平成28年秋期　問11
-1Mバイトのメモリを図のようにMPUに接続するとき，最低限必要なアドレスバスの信号線の本数 n はどれか。ここで，メモリにはバイト単位でアクセスするものとし，1Mバイトは1,024kバイト，1kバイトは1,024バイトとする。
+CPUなどがデータの読書き対象となるメモリ上の番地(アドレス)を伝送するための信号伝達経路です。  
+アドレスバスは複数の信号線から成り、各信号線が0又は1を伝えます。  
+このため信号線が8本であれば28＝256種類のアドレス、16本では216＝65,536種類というように信号線の多さによって扱えるメモリ範囲の大きさが決まります。  
+バスに使われている信号線の数をバス幅といいます。  
 
-→
+#### 基本 平成28年秋期　問11
 
-設問のメモリは1Mバイトであるため、アドレスバスには最低でも1,024×1,024種類のアドレスを表現できる信号線数が要求されます。
-　1,024×1,024＝2^10×2^10＝220(種類)
-前述のように各信号線が伝える情報は0又は1の2種類であるため、20本の信号線があれば2^20種類のアドレスが表現できます。
+1Mバイトのメモリを図のようにMPUに接続するとき，最低限必要なアドレスバスの信号線の本数 n はどれか。ここで，メモリにはバイト単位でアクセスするものとし，1Mバイトは1,024kバイト，1kバイトは1,024バイトとする。  
 
-2の0から20乗まで計算したバカがここにいます。
-1024*1024 = 2^10 * 2^10 = 2^20ってそれだけでよかったのにね。
-もっとよく考えようと思いました。
+→  
+
+設問のメモリは1Mバイトであるため、アドレスバスには最低でも1,024×1,024種類のアドレスを表現できる信号線数が要求されます。  
+　1,024×1,024＝2^10×2^10＝220(種類)  
+前述のように各信号線が伝える情報は0又は1の2種類であるため、20本の信号線があれば2^20種類のアドレスが表現できます。  
+
+2の0から20乗まで計算したバカがここにいます。  
+1024*1024 = 2^10 * 2^10 = 2^20ってそれだけでよかったのにね。  
+もっとよく考えようと思いました。  
 
 ---
 
