--- a/MarkDown/マークダウン記法練習.md
+++ b/MarkDown/マークダウン記法練習.md
@@ -7,6 +7,7 @@
 
 ## 見出し1
 
+``` txt
 # 見出し1
 
 ## 見出し2
@@ -18,6 +19,7 @@
 ##### 見出し5
 
 ###### 見出し6
+```
 
 ---
 
@@ -61,7 +63,7 @@
 ## 引用
 
 > お世話になります。xxxです。
-> 
+>  
 > ご連絡いただいた、バグの件ですが、仕様です。
 
 ---
@@ -69,10 +71,10 @@
 ## 二重引用
 
 > お世話になります。xxxです。
-> 
+>  
 > ご連絡いただいた、バグの件ですが、仕様です。
 >> お世話になります。 yyyです。
->> 
+>>  
 >> あの新機能バグってるっすね
 
 ---
@@ -155,6 +157,12 @@ ___
 `[表示文字](リンクURL)`形式でリンクを記述できます
 
 [Google先生](https://www.google.co.jp/)
+
+## 画像
+
+`![代替文字](リンクURL)`形式でリンク画像を埋め込み  
+
+![!](url)  
 
 ---
 
@@ -249,7 +257,7 @@ GitHubのMarkdownを利用すると、見出し記法を利用した際に
 アンカーが自動的に作成されます。
 そのアンカーを利用したページ内リンクを簡単に作成できます。
 
-```
+``` txt
   ## menu
   * [to header1](#header1)
   * [to header2](#header2)
