詰まってるやつメモ

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -836,7 +836,117 @@ IETFによってRFC 7519として標準化されている。
         public string BirthDay { get; }
         public int Age { get; }
     }
+```
 
+---
+
+##
+
+``` C#
+        private void CopyRepre(ReservationPlayerView obj)
+        {
+            if (obj == null)
+            {
+                return;
+            }
+
+            void Swap(ref ReservationPlayerView x, ref ReservationPlayerView y)
+            {
+                ReservationPlayerView tmp = y;
+                y = x;
+                x = tmp;
+            }
+
+            // temp代表者
+            ReservationPlayerView TempRepre = null;
+            // 代表者を押した場所にする
+            foreach (var frame in SelectedReservation.ReservationFrameList)
+            {
+                Func<ReservationPlayerView, ReservationPlayerView> Selected = (select) =>
+                {
+                    if (frame.ReservationPlayer1 == select)
+                    {
+                        return frame.ReservationPlayer1;
+                    }
+                    if (frame.ReservationPlayer2 == select)
+                    {
+                        return frame.ReservationPlayer2;
+                    }
+                    if (frame.ReservationPlayer3 == select)
+                    {
+                        return frame.ReservationPlayer3;
+                    }
+                    if (frame.ReservationPlayer4 == select)
+                    {
+                        return frame.ReservationPlayer4;
+                    }
+                    return null;
+                };
+
+
+                if (frame.ReservationPlayer1 != obj && (frame.ReservationPlayer1?.ReservationRepreFlag ?? false))
+                {
+                    //TempRepre = frame.ReservationPlayer1;
+                    //frame.ReservationPlayer1 = obj;
+                    TempRepre = frame.ReservationPlayer1;
+                    var TempSelect = Selected(obj);
+                    frame.ReservationPlayer1 = TempSelect;
+                    TempSelect = TempRepre;
+
+                    frame.ReservationPlayer1.ReservationRepreFlag = false;
+                }
+                if (frame.ReservationPlayer2 != obj && (frame.ReservationPlayer2?.ReservationRepreFlag ?? false))
+                {
+                    //TempRepre = frame.ReservationPlayer2;
+                    //frame.ReservationPlayer2 = obj;
+                    TempRepre = frame.ReservationPlayer2;
+                    var TempSelect = Selected(obj);
+                    frame.ReservationPlayer2 = TempSelect;
+                    TempSelect = TempRepre;
+
+                    frame.ReservationPlayer2.ReservationRepreFlag = false;
+                }
+                if (frame.ReservationPlayer3 != obj && (frame.ReservationPlayer3?.ReservationRepreFlag ?? false))
+                {
+                    if (frame.ReservationPlayer1 == obj)
+                    {
+                        TempRepre = frame.ReservationPlayer3;
+                        frame.ReservationPlayer3 = frame.ReservationPlayer1;
+                        frame.ReservationPlayer1 = TempRepre;
+                    }
+                    if (frame.ReservationPlayer2 == obj)
+                    {
+                        TempRepre = frame.ReservationPlayer3;
+                        frame.ReservationPlayer3 = frame.ReservationPlayer2;
+                        frame.ReservationPlayer2 = TempRepre;
+                    }
+                    if (frame.ReservationPlayer3 == obj)
+                    {
+                        TempRepre = frame.ReservationPlayer3;
+                        frame.ReservationPlayer3 = frame.ReservationPlayer3;
+                        frame.ReservationPlayer2 = TempRepre;
+                    }
+                    if (frame.ReservationPlayer4 == obj)
+                    {
+                        TempRepre = frame.ReservationPlayer3;
+                        frame.ReservationPlayer3 = frame.ReservationPlayer4;
+                        frame.ReservationPlayer4 = TempRepre;
+                    }
+                    frame.ReservationPlayer3.ReservationRepreFlag = false;
+                }
+                if (frame.ReservationPlayer4 != obj && (frame.ReservationPlayer4?.ReservationRepreFlag ?? false))
+                {
+                    //TempRepre = frame.ReservationPlayer4;
+                    //frame.ReservationPlayer4 = obj;
+                    TempRepre = frame.ReservationPlayer4;
+                    var TempSelect = Selected(obj);
+                    frame.ReservationPlayer4 = TempSelect;
+                    TempSelect = TempRepre;
+
+                    frame.ReservationPlayer4.ReservationRepreFlag = false;
+                }
+            }
+        }
 ```
 
 ---
