--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -960,4 +960,13 @@ avalon peninsula canada
 DISTINCTとワイルドカード `*` を併用したら.NETFrameworkで実行速度が遅くなるらしい
 
 
+今日で基礎理論の20問くらいまで行ってくれるとありがたい。  
+次の2連休で本番形式でやる。  
+さて、どうなっちゃうか。  
+
+1年の集大成だよなー。
+それが後2週間後。
+でも自信ないなー。
+もっと勉強していたい。  
+
 
